--- a/Detectie/ACPI/MainWindow.ui
+++ b/Detectie/ACPI/MainWindow.ui
@@ -6,41 +6,31 @@
    <rect>
     <x>0</x>
     <y>0</y>
-    <width>1030</width>
-    <height>505</height>
+    <width>1020</width>
+    <height>440</height>
    </rect>
   </property>
   <property name="minimumSize">
    <size>
-    <width>1030</width>
-    <height>505</height>
+    <width>1020</width>
+    <height>440</height>
    </size>
   </property>
   <property name="maximumSize">
    <size>
-    <width>1030</width>
-    <height>505</height>
+    <width>1020</width>
+    <height>440</height>
    </size>
   </property>
   <property name="windowTitle">
    <string>MainWindow</string>
   </property>
   <widget class="QWidget" name="centralwidget">
-   <widget class="QGraphicsView" name="graphicsView">
-    <property name="geometry">
-     <rect>
-      <x>15</x>
-      <y>41</y>
-      <width>480</width>
-      <height>380</height>
-     </rect>
-    </property>
-   </widget>
-   <widget class="QPushButton" name="pushButton">
+   <widget class="QPushButton" name="LoadImage">
     <property name="geometry">
      <rect>
       <x>20</x>
-      <y>450</y>
+      <y>390</y>
       <width>101</width>
       <height>31</height>
      </rect>
@@ -53,7 +43,7 @@
     <property name="geometry">
      <rect>
       <x>0</x>
-      <y>430</y>
+      <y>370</y>
       <width>1021</width>
       <height>4</height>
      </rect>
@@ -72,7 +62,7 @@
     <property name="geometry">
      <rect>
       <x>490</x>
-      <y>-30</y>
+      <y>-90</y>
       <width>41</width>
       <height>461</height>
      </rect>
@@ -113,11 +103,11 @@
      <string>Imaginea filtrata</string>
     </property>
    </widget>
-   <widget class="QPushButton" name="pushButton_2">
+   <widget class="QPushButton" name="ApplyFilter">
     <property name="geometry">
      <rect>
       <x>460</x>
-      <y>450</y>
+      <y>390</y>
       <width>101</width>
       <height>31</height>
      </rect>
@@ -126,11 +116,11 @@
      <string>Aplica filtru</string>
     </property>
    </widget>
-   <widget class="QPushButton" name="pushButton_3">
+   <widget class="QPushButton" name="SaveImage">
     <property name="geometry">
      <rect>
       <x>890</x>
-      <y>450</y>
+      <y>390</y>
       <width>101</width>
       <height>31</height>
      </rect>
@@ -139,14 +129,54 @@
      <string>Salvare Imagine</string>
     </property>
    </widget>
-   <widget class="QGraphicsView" name="graphicsView_2">
+   <widget class="QLabel" name="Poza_OG">
+    <property name="geometry">
+     <rect>
+      <x>10</x>
+      <y>40</y>
+      <width>480</width>
+      <height>320</height>
+     </rect>
+    </property>
+    <property name="minimumSize">
+     <size>
+      <width>480</width>
+      <height>320</height>
+     </size>
+    </property>
+    <property name="maximumSize">
+     <size>
+      <width>480</width>
+      <height>320</height>
+     </size>
+    </property>
+    <property name="text">
+     <string/>
+    </property>
+    <property name="scaledContents">
+     <bool>true</bool>
+    </property>
+   </widget>
+   <widget class="QLabel" name="Poza_FILT">
     <property name="geometry">
      <rect>
       <x>530</x>
       <y>40</y>
       <width>480</width>
-      <height>380</height>
+      <height>320</height>
      </rect>
+    </property>
+    <property name="minimumSize">
+     <size>
+      <width>480</width>
+      <height>320</height>
+     </size>
+    </property>
+    <property name="text">
+     <string/>
+    </property>
+    <property name="scaledContents">
+     <bool>true</bool>
     </property>
    </widget>
   </widget>
